--- a/wp-plugin__REST--labs/index.mdx
+++ b/wp-plugin__REST--labs/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__REST--labs"
 slug:  "/projects/wp-plugin__rest--labs"
 date:  "2021-03-04"
-title: "ParkourLabs REST API"
+title: "REST API for ParkourLabs CPT"
 icon:  "wordpress"
 desc:  "Access the REST Interface to parkourlabs.com and pull Images"
 ---
