--- a/wp-plugin__menus--responsive/index.mdx
+++ b/wp-plugin__menus--responsive/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__menus--responsive"
 slug:  "/projects/wp-plugin__menus--responsive"
 date:  "2019-11-11"
-title: "Mobile Menu Dropdown"
+title: "Dropdown Mobile Menu"
 icon:  "wordpress"
 desc:  "Changes a wordpress dynamic sidebar menu into a responsive dropdown select menu"
 ---
