--- a/wp-plugin__footer/index.mdx
+++ b/wp-plugin__footer/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__footer"
 slug:  "/projects/wp-plugin__footer"
 date:  "2019-10-28"
-title: "Page as Footer"
+title: "Footer Pages"
 icon:  "wordpress"
 desc:  "ACF-based panel to allow you to select a specific page for your footer."
 ---
