--- a/wp-plugin__REST--pulse/index.mdx
+++ b/wp-plugin__REST--pulse/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/wp-plugin__REST--pulse"
 slug:  "/projects/wp-plugin__rest--pulse"
 date:  "2020-07-25"
-title: "REST API for ParkourPulse CPT"
+title: "REST API client for ParkourPulse CPT"
 icon:  "wordpress"
-desc:  "REST API and shortcode for animated Stack of posts on homepage. Uses anime.js"
+desc:  "REST API client and shortcode for animated Stack of posts on homepage. Uses anime.js"
 ---
 
 <div id="top"></div>
@@ -13,7 +13,7 @@ desc:  "REST API and shortcode for animated Stack of posts on homepage. Uses ani
 
 <img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fapi.svg&fill=%23F97316&width=200px&height=200px" style="width:200px;"/>
 
-<h3 align="center">ParkourPulse.com REST API and shortcodes</h3>
+<h3 align="center">ParkourPulse.com REST API client and stack shortcodes</h3>
 
 <p align="center">
     This is a small shortcode to display a "stack" of images from the latest ParkourPulse images.
@@ -49,7 +49,7 @@ To accomplish this, two parts needs to happen:
 1. ParkourPulse needed to extend it's REST API so that the custom post type and associated images could be queried.
 1. LondonParkour needed a shortcode to communicate with that REST API endpoint, pull the images and render them out in the "stack".
 
-This plugin addresses both parts. It communicates with the API and pulls in the data. It then provides shortcodes to render them out.
+This plugin addresses the second part. It communicates with the API and pulls in the data. It then provides shortcodes to render them out.
 
 <p align="right">(<a href="#top">back to top</a>)</p>
 
