--- a/wp-plugin__REST--labs/index.mdx
+++ b/wp-plugin__REST--labs/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__REST--labs"
 slug:  "/projects/wp-plugin__rest--labs"
 date:  "2021-03-04"
-title: "REST API for ParkourLabs CPT"
+title: "REST API client for ParkourLabs CPT (stack)"
 icon:  "wordpress"
 desc:  "Access the REST Interface to parkourlabs.com and pull Images"
 ---
@@ -13,7 +13,7 @@ desc:  "Access the REST Interface to parkourlabs.com and pull Images"
 
 <img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fapi.svg&fill=%2322C55E&width=200px&height=200px" style="width:200px;"/>
 
-<h3 align="center">ParkourLabs.com REST API</h3>
+<h3 align="center">ParkourLabs.com REST API client and stack shortcodes</h3>
 
 <p align="center">
     This is a small plugin to utilise the ParkourLabs.com REST API custom post types and their images. The provided shortcode will display a "stack" of images from those images. 
@@ -75,7 +75,7 @@ These are the steps to get up and running with this plugin.
 
 1. Clone the repo into your wordpress plugin folder
     ```sh
-    git clone https://github.com/IORoot/wp-plugin__REST--labs.git ./wp-content/plugins/ParkourLabs_REST_API
+    git clone https://github.com/IORoot/wp-plugin__REST--labs.git ./wp-content/plugins/ParkourLabs_REST_API_stack
     ```
 1. Insert one of the two shortcodes into your page.
     ```php
