--- a/wp-plugin__rest--isometric/index.mdx
+++ b/wp-plugin__rest--isometric/index.mdx
@@ -1,11 +1,13 @@
 ---
-repo: "https://github.com/IORoot/wp-plugin__rest--isometric"
+repo: "https://github.com/IORoot/wp-plugin__REST--isometric"
 slug:  "/projects/wp-plugin__rest--isometric"
 date:  "2021-10-26"
-title: "REST API client for ParkourLabs CPT (isometric)"
-icon:  "wordpress"
-desc:  "Generic REST API request with a view output of images in an isometic format."
+title: "wp-plugin__REST--isometric"
+icon:  "scss"
+desc:  "Generic REST request with a view output of images in an isometic format."
 ---
+
+
 
 <div id="top"></div>
 
