--- a/wp-plugin__REST2--isometric/index.mdx
+++ b/wp-plugin__REST2--isometric/index.mdx
@@ -2,8 +2,8 @@
 repo: "https://github.com/IORoot/wp-plugin__REST--isometric"
 slug:  "/projects/wp-plugin__rest--isometric"
 date:  "2021-10-26"
-title: "wp-plugin__REST--isometric"
-icon:  "scss"
+title: "REST API client for ParkourLabs CPT (isometric)"
+icon:  "wordpress"
 desc:  "Generic REST request with a view output of images in an isometic format."
 ---
 
