--- a/wp-plugin__regexer/index.mdx
+++ b/wp-plugin__regexer/index.mdx
@@ -2,8 +2,8 @@
 repo: "https://github.com/IORoot/wp-plugin__regexer"
 slug:  "/projects/wp-plugin__regexer"
 date:  "2020-02-07"
-title: "wp-plugin__regexer"
-icon:  "php"
+title: "Regexer"
+icon:  "wordpress"
 desc:  "Apply a regex to any post type and field. Test, Single ID or Bulk all posts of type."
 ---
 
