--- a/wp-plugin__menus--extended/index.mdx
+++ b/wp-plugin__menus--extended/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/wp-plugin__menus--extended"
 slug:  "/projects/wp-plugin__menus--extended"
 date:  "2021-01-08"
-title: "wp-plugin__menus--extended"
-icon:  "php"
-desc:  "Inject any HTML code into the wordpress menu"
+title: "Wordpress Menus Extended"
+icon:  "wordpress"
+desc:  "Inject any HTML code into a wordpress menu"
 ---
 
 <div id="top"></div>
