iterm, not shell

--- a/htmltree/index.mdx
+++ b/htmltree/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/htmltree"
 slug:  "/projects/htmltree"
 date:  "2022-07-20"
 title: "htmltree"
-icon:  "shell"
+icon:  "iterm2"
 desc:  "Generate HTML index.html files in a linux file structure."
 ---
 
